syntax = "proto3";

package greet;

message Greeting {
  string first_name=1;
  string last_name=2;
}

message GreetingRequest {
  Greeting greeting = 1;
}

message GreetingResponse {
  string result=1;
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result=1;
}

message LongGreetingRequest {
  Greeting greeting = 1;
}

message LongGreetingResponse {
  string result=1;
}

message GreetEveryoneRequest {
  Greeting greeting = 1;
}

message GreetEveryoneResponse {
  string result=1;
}

service GreetingService {
  // Unary
  rpc Greet (GreetingRequest) returns (GreetingResponse) {}
  // Server streaming
  rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {}
  // Client streaming
  rpc LongGreet (stream LongGreetingRequest) returns (LongGreetingResponse) {}
  // BiDirectional Streaming
  rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}
  // deadline
  rpc Great_with_deadline (GreetingRequest) returns (GreetingResponse) {}
} 